--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,48 @@
-.macros {
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+.panel {
+  min-height: 100vh;
 }
 
-.macros p {
+.macro {
+  min-height: 6rem;
+}
+
+.macros {
+  grid-template-columns: repeat(4, 1fr);
+  overflow-y: visible;
+}
+
+p {
   margin: 0;
+}
+
+.clear {
+  cursor: pointer;
+}
+
+.chat {
+  max-height: 100vh;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+  .panel {
+    flex-direction: column-reverse;
+    height: unset;
+  }
+
+  .panel .macros {
+    min-height: 100vh;
+    margin-bottom: 2rem;
+  }
+
+  .panel .chat {
+    width: 100%;
+    height: 50vh;
+  }
+}
+
+@media (max-width: 991px) {
+  .panel .macros {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
